@@ -90,6 +90,8 @@ t/country-test-ar.t
 t/country-test-sm.t
 t/fork.t
 t/country-test-my.t
+lib/Number/Phone/Data.pm
+t/source_data.t
 lib/Number/Phone/StubCountry/AC.pm
 lib/Number/Phone/StubCountry/AD.pm
 lib/Number/Phone/StubCountry/AE.pm
@@ -335,5 +337,3 @@ lib/Number/Phone/StubCountry/YT.pm
 lib/Number/Phone/StubCountry/ZA.pm
 lib/Number/Phone/StubCountry/ZM.pm
 lib/Number/Phone/StubCountry/ZW.pm
-lib/Number/Phone/Data.pm
-t/source_data.t
