@@ -69,7 +69,7 @@ object the canonical incantation is C<< Number::Phone->new('+44 ...') >>.
 
 Returns a string telling where and when the data that drives this class was last updated, looking something like:
 
-    "OFCOM at Wed Sep 30 10:37:39 2020"
+    "OFCOM at Wed Sep 30 10:37:39 2020 UTC"
 
 The current value of this is also documented in L<Number::Phone::Data>.
 
