@@ -1,8 +1,9 @@
 XXXX-XX-XX      XXXXXX  Windows doesn't properly support fork() so skip the tests for it;
                         Use data from a tagged release of libphonenumber instead of whatever
                           is in master, so builds are more reproducible;
-                        Expose that in libphonenumber_tag method;
-                        Expose OFCOM update date/time in N::P::UK->data_source method;
+                        Expose that tag in libphonenumber_tag method;
+                        Expose OFCOM, CNAC, NPA and localcallingguide.com data update
+                          date/time in N::P::{UK,NANP::CA,NANP::US,NANP}->data_source
                         Data updates
 
 2020-09-04      3.6006  Data updates
